Bug 390016 - Featured page doesn't show all items in distros with imperfect AppStream information
Summary: Featured page doesn't show all items in distros with imperfect AppStream info...
Status: VERIFIED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.12.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-07 16:33 UTC by Nate Graham
Modified: 2018-02-08 00:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.12.1
Sentry Crash Report:


Attachments
Only three Featured apps on Neon and Kubuntu (314.28 KB, image/png)
2018-02-07 16:33 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2018-02-07 16:33:55 UTC
Created attachment 110409 [details]
Only three Featured apps on Neon and Kubuntu

In Kubuntu and KDE Neon, for example, I only see three entries. See attached screenshot.

Also see proposed patch on https://phabricator.kde.org/D10129

Maybe that's not the right approach, but the problem it aims to solve is real and it's not realistic to expect distros to cooperate and fix the problem themselves.
Comment 1 Aleix Pol 2018-02-07 17:16:40 UTC
Git commit 83f96d8d654a6a95619e6de92980bb6eae4c2e2b by Aleix Pol.
Committed on 07/02/2018 at 17:16.
Pushed by apol into branch 'Plasma/5.12'.

Make it possible to specify a fallback appstream id

Some applications changed ids over time, make it possible to find the new
using the old one.

M  +14   -1    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

https://commits.kde.org/discover/83f96d8d654a6a95619e6de92980bb6eae4c2e2b
Comment 2 Nate Graham 2018-02-08 00:06:03 UTC
Verified!!! So glad to have this fixed.