Make it possible to specify a fallback appstream id

Some applications changed ids over time, make it possible to find the new
using the old one.

BUG: 390016